--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
     <head>
         <title>My app</title>
     </head>
-</html>
+    <body>
+        This is my app
+        Login Form
+    </body>
+</html>  
